# qr-code-styling-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
examples/: basic.rs  bulk_pdf.rs  generate_samples.rs  with_border.rs  with_logo.rs
src/: error.rs  lib.rs
src/config/: background_options.rs  color.rs  corner_options.rs  dot_options.rs  gradient.rs  image_options.rs  mod.rs  options.rs  qr_options.rs
src/core/: mod.rs  qr_code_styling.rs  qr_matrix.rs
src/figures/: mod.rs  traits.rs
src/figures/corner_dot/: drawer.rs  mod.rs
src/figures/corner_square/: drawer.rs  mod.rs
src/figures/dot/: drawer.rs  mod.rs
src/plugins/: border.rs  mod.rs
src/rendering/: mod.rs  pdf_renderer.rs  raster_renderer.rs  svg_renderer.rs
src/types/: corner_dot_type.rs  corner_square_type.rs  dot_type.rs  error_correction.rs  gradient_type.rs  mod.rs  mode.rs  output_format.rs  shape_type.rs
src/utils/: calculate_image_size.rs  mod.rs
